[gd_scene load_steps=8 format=3 uid="uid://dh3xqk7m2yqvs"]

[ext_resource type="Script" path="res://_ui/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.2, 0.0, 0.0, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.9, 0.1, 0.1, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_bg"]
bg_color = Color(0.0, 0.2, 0.0, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_fill"]
bg_color = Color(0.2, 0.9, 0.2, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_bar_label"]
font_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HealthContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HealthContainer"]
layout_mode = 2
text = "Health"
label_settings = SubResource("LabelSettings_bar_label")

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/HealthContainer"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
min_value = 0.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/StaminaContainer"]
layout_mode = 2
text = "Stamina"
label_settings = SubResource("LabelSettings_bar_label")

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/StaminaContainer"]
custom_minimum_size = Vector2(200, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_stamina_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_stamina_fill")
min_value = 0.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(4, 4)
layout_mode = 2
color = Color(1, 1, 1, 0.8)

[node name="ToolMessageLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
text = "Tool Message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClimbingIndicator" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 90.0
grow_horizontal = 2
text = "CLIMBING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourceDisplay" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 16
alignment = 2

[node name="InventoryHint" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 0.7)
text = "Press Tab for Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PickupPrompt" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1.0, 1.0, 1.0, 0.8)
theme_override_font_sizes/font_size = 18
text = "[E] Pick up Stone x1"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="CollectionIndicator" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 85.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.3, 1.0, 0.5, 0.8)
theme_override_font_sizes/font_size = 14
text = "Auto-Collect ON"
horizontal_alignment = 2
